[package]
name = "socket_io_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
serde_json = "1.0.108"
socketioxide = { version = "0.9.0", features = [
    "extensions",
    "state",
]}
tokio = { version="1.35.0", features = ["rt-multi-thread", "macros"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.5.0", features = ["cors", "fs"] }
tower = { version = "0.4.13", default-features = false }
